--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "requests>=2.31.0",
     "pydantic>=2.0.0",
     "PyYAML>=6.0",
-    "uuid6>=1.0"
+    "uuid6>=1.0",
+    "python-dotenv>=1.0.0"
 ]
 
 [project.optional-dependencies]
